# vk-simple

./: .gitignore  CMakeLists.txt  NOTICE  README.md  main.cpp  vk-simple.cpp  vk-simple.h
engine/: Buffer.cpp  Buffer.h  CMakeLists.txt  DebugUtils.cpp  DebugUtils.h  Engine.cpp  Engine.h  FrameData.cpp  FrameData.h  IVulkanWindow.h  ImprovedNoise.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  SDLVulkanWindow.cpp  SDLVulkanWindow.h  ShaderModule.cpp  ShaderModule.h  ShaderModuleLoader.cpp  ShaderModuleLoader.h  StagingCommandPool.cpp  StagingCommandPool.h  Swapchain.cpp  Swapchain.h  SwapchainSupportDetails.cpp  SwapchainSupportDetails.h  UniformBuffer.cpp  UniformBuffer.h  UniformObject.cpp  UniformObject.h  Util.h  Vertex.h  Vma.cpp  Vma.h  VmaBuffer.cpp  VmaBuffer.h  VmaHelpers.h  VmaImage.cpp  VmaImage.h  stdafx.h
models/: CMakeLists.txt
shaders/: CMakeLists.txt  perlin.slang  shader.slang
textures/: CMakeLists.txt
